<resources>
    <string name="app_name">MyHolidays</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="impossible_error">Impossible error</string>
    <string name="impossible_error_text">The impossible error ocurred. The error that logically can never happen just happened.</string>
    <string name="description">Herfstvakantie</string>
    <string name="dash">-</string>
    <string name="startdate">01/10/2021</string>
    <string name="timeunit_d">dagen</string>
    <string name="timeunit_h">uur</string>
    <string name="timeunit_m">minuten</string>
    <string name="todo">TODO</string>
    <string name="units">2</string>
    <string name="text">Begint (officieel) over</string>
    <string name="enddate">07/10/2021</string>
    <string name="NoErrorMessage">nader te bepalen</string>
    <string name="UploadingUserData">Uploading data...</string>
    <string name="DownloadingUserData">Downloading data</string>
    <string name="ProgressContent">Progress</string>
    <string name="Placeholder">placeholder</string>
    <string name="ErrorContent">Error</string>
    <string name="success">Success</string>
    <string name="CloudSyncFailed">Cloud synchronization failed.</string>
    <string name="HolidayOver">Deze vakantie is al voorbij :(</string>
    <string name="HolidayOngoing">Deze vakantie is NU bezig!</string>
    <string name="Error_in_settings">Error in settings</string>
    <string name="invalid_period_interval">The period you selected is invalid, the interval between both years should be exactly one</string>
    <string name="invalid_period_order">The period you selected is invalid, start year should be before the end year</string>
    <string name="unexpected_error">\"Unexpected error \"</string>
    <string name="parts_exception">\"String[] parts exception \"</string>
    <string name="tag">DENNIS_B</string>
    <string name="default_tag">\"Tag: default value \"</string>
    <string name="default_text">\"Text: default value \"</string>
    <string name="preferences_error">\"error getting preferences \"</string>
    <string name="txtstart_end">\"txtStart-txtEnd \"</string>
    <string name="activity_event_listener_data">sending data to activityEventListener</string>
    <string name="preferences_save_error">\"error saving preferences \"</string>
    <string name="signature">\"Has signature key \"</string>
    <string name="dismiss_dialog">Dismiss progress dialog (after populating recycler view)</string>
    <string name="start_settings">start settings</string>
    <string name="reclyclerview_row_error">\"error trying to fill recycler view row \"</string>
    <string name="recyclerview_rows">\"Number of recyclerview rows \"</string>
    <string name="get_canonical">\"data.getCanonical() \"</string>
    <string name="vacation_tostring">\"vacation.toString() \"</string>
</resources>