<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:focusableInTouchMode="true"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivHolidaySad"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/smiley_sad"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivHolidayHappy"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/smiley_happy"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivHolidayContent"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/smiley_content"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivPlaceHolder"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtHolidayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/ivPlaceHolder"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHolidayTitle"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/ivPlaceHolder"
        android:text="@string/startdate" />

    <TextView
        android:id="@+id/txtDash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHolidayTitle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/txtStartDate"
        android:text="@string/dash" />

    <TextView
        android:id="@+id/txtEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHolidayTitle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/txtDash"
        android:text="@string/enddate" />

    <TextView
        android:id="@+id/txtStartsIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStartDate"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/ivPlaceHolder"
        android:text="@string/text" />

    <TextView
        android:id="@+id/txtVacationOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStartDate"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/ivPlaceHolder"
        android:text="@string/HolidayOver"
        android:textColor="@color/toaster_red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtNrOfDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStartDate"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/txtStartsIn"
        android:text="@string/units"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTimeUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStartDate"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/txtNrOfDays"
        android:text="@string/timeunit" />

</RelativeLayout>