<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgViewImpossibleError"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/success"
        app:srcCompat="@mipmap/impossible" />

    <TextView
        android:id="@+id/txtViewImpossibleErrorHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@id/imgViewImpossibleError"
        android:layout_toRightOf="@id/imgViewImpossibleError"
        android:text="@string/impossible_error"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewImpossibleErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewImpossibleErrorHeader"
        android:layout_alignStart="@id/txtViewImpossibleErrorHeader"
        android:layout_alignLeft="@id/txtViewImpossibleErrorHeader"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/impossible_error_text"
        android:textColor="@color/colorPrimaryDark" />
</RelativeLayout>